--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">alarmC</string>
+    <string name="name">Name:</string>
+    <string name="email">Email:</string>
+    <string name="age">Age:</string>
+    <string name="dob">DOB:</string>
+    <string name="des">Description:</string>
 </resources>
